Fix window position via z-index in IE

--- a/components/com_jce/editor/tiny_mce/plugins/inlinepopups/css/window.css
+++ b/components/com_jce/editor/tiny_mce/plugins/inlinepopups/css/window.css
@@ -42,7 +42,6 @@
     top: 0;
     width: 100%;
     padding: 10px;
-    z-index: 500000;
 }
 
 .mceModalFrame:after {
